# BibbleVM

./: CMakeLists.txt
framework/: CMakeLists.txt
framework/include/BibbleVM/: _debug.h  config.h  init.h  vm.h
framework/include/BibbleVM/allocator/: arena.h
framework/include/BibbleVM/core/: error.h  opcodes.h  value.h
framework/include/BibbleVM/core/executor/: const_pool.h  function.h  instruction.h  interpreter.h  module.h  scheduler.h  scheduler_message.h  stack.h  task.h
framework/include/BibbleVM/core/gc/: memory_manager.h  nursery.h  old_gen_heap.h
framework/include/BibbleVM/core/module/: class.h  const_pool.h  field.h  function.h  instruction.h  method.h  module.h
framework/include/BibbleVM/core/oop/: array_view.h  class.h  field.h  method.h  object.h  string.h  type.h  visit_children.h
framework/include/BibbleVM/executor/: const_pool.h  function.h  instruction.h  interpreter.h  module.h  scheduler.h  scheduler_message.h  stack.h  task.h
framework/include/BibbleVM/linker/: intrinsics.h  linker.h  module.h
framework/include/BibbleVM/module/: const_pool.h  function.h  instruction.h  module.h
framework/include/BibbleVM/native/: interface.h  plugin_manager.h  trampoline.h
framework/include/BibbleVM/util/: list.h  safe_math.h  string_pool.h  time_manager.h
framework/src/: config.cpp  init.cpp  vm.cpp
framework/src/allocator/: arena.cpp
framework/src/core/: error.cpp  opcodes.cpp  value.cpp
framework/src/core/executor/: const_pool.cpp  function.cpp  interpreter.cpp  module.cpp  scheduler.cpp  stack.cpp
framework/src/core/gc/: memory_manager.cpp  nursery.cpp  old_gen_heap.cpp
framework/src/core/module/: instruction.cpp
framework/src/core/oop/: class.cpp  future.cpp  string.cpp  type.cpp
framework/src/executor/: const_pool.cpp  function.cpp  interpreter.cpp  module.cpp  scheduler.cpp  stack.cpp  task.cpp
framework/src/linker/: intrinsics.cpp  linker.cpp
framework/src/module/: const_pool.cpp  function.cpp  instruction.cpp  module.cpp
framework/src/native/: interface.cpp  plugin_manager.cpp  trampoline.cpp
framework/src/util/: string_pool.cpp
main/: CMakeLists.txt
main/src/: main.cpp  plugin.cpp
native_interface/: CMakeLists.txt
native_interface/include/: BibbleInterface.h
tests/: CMakeLists.txt  gc_test.cpp  test_main.cpp
